// Copyright 2025 DeepMind Technologies Limited.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

# Classic RL task implemented as an Android app.

load("@rules_android//rules:rules.bzl", "android_binary")
load("@rules_kotlin//kotlin:android.bzl", "kt_android_library")

package(
    default_applicable_licenses = ["//third_party/py/android_env:license"],
    default_visibility = ["//catch:__subpackages__"],
)

licenses(["notice"])

# Build targets will slowly be added to this project and ultimately we'll have
# an android_binary() target that'll contain the app.
kt_android_library(
    name = "GameLogic",
    srcs = ["GameLogic.kt"],
    deps = [
        "//catch/sprite:Background",
        "//catch/sprite:Ball",
        "//catch/sprite:LineSegment",
        "//catch/sprite:Paddle",
        "@maven//:joda_time_joda_time",
    ],
)

kt_android_library(
    name = "RenderThread",
    srcs = ["RenderThread.kt"],
    deps = [
        ":GameLogic",
        "@maven//:joda_time_joda_time",
    ],
)

kt_android_library(
    name = "MainActivity",
    srcs = ["MainActivity.kt"],
    manifest = "AndroidManifest.xml",
    resource_files = glob(["res/**"]),
    deps = [
        ":GameLogic",
        ":GameLogicThread",
        ":RenderThread",
        "//catch/sprite:Background",
        "//catch/sprite:Ball",
        "//catch/sprite:Paddle",
    ],
)

android_binary(
    name = "app",
    manifest = "AndroidManifest.xml",
    multidex = "native",
    deps = [":MainActivity"],
)

kt_android_library(
    name = "GameLogicThread",
    srcs = ["GameLogicThread.kt"],
    deps = [
        ":GameLogic",
    ],
)
