# Copyright 2025 DeepMind Technologies Limited.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Sprites for the app.

load("@rules_kotlin//kotlin:android.bzl", "kt_android_library")

package(
    default_visibility = ["//java/com/google/androidenv/catch:catch_packages"],
)

licenses(["notice"])

kt_android_library(
    name = "Background",
    srcs = ["Background.kt"],
    deps = [":Sprite"],
)

kt_android_library(
    name = "Ball",
    srcs = ["Ball.kt"],
    deps = [
        ":LineSegment",
        ":Point",
        ":Sprite",
    ],
)

kt_android_library(
    name = "LineSegment",
    srcs = ["LineSegment.kt"],
    deps = [":Point"],
)

kt_android_library(
    name = "Paddle",
    srcs = ["Paddle.kt"],
    deps = [
        ":Point",
        ":Sprite",
    ],
)

kt_android_library(
    name = "Point",
    srcs = ["Point.kt"],
)

kt_android_library(
    name = "Sprite",
    srcs = ["Sprite.kt"],
)
